--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -442,6 +442,10 @@ body {
   font-family: "Noto Serif", serif;
 }
 
+h1, h2 {
+  font-weight: 500;
+}
+
 /* =============
     Buttons
 ============= */
@@ -543,7 +547,7 @@ svg {
     justify-content: center;
     gap: 10px;
     row-gap: 10px;
-    grid-template-areas: ". i1 i1 i2 i2 ." "i3 i3 i4 i4 i5 i5";
+    grid-template-areas: ". i1 i1 i1 i1 ." "i2 i2 i3 i3 i4 i4";
   }
   #details > div ul #i1 {
     grid-area: i1;
@@ -556,9 +560,6 @@ svg {
   }
   #details > div ul #i4 {
     grid-area: i4;
-  }
-  #details > div ul #i5 {
-    grid-area: i5;
   }
 }
 #details > div ul li {
@@ -596,22 +597,19 @@ svg {
   justify-content: center;
   gap: 16px;
 }
-@media (min-width: 1024px) {
-  #parts > div {
-    flex-direction: row;
-    gap: 0px;
-    margin: 0;
-  }
-}
 #parts #blade-container {
   width: 100%;
+  height: 100%;
+  max-width: 1000px;
 }
 #parts #blade-container #blade {
   background-color: var(--cherry90);
   gap: 20px;
 }
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   #parts #blade-container #blade {
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: 50% auto;
   }
@@ -626,16 +624,25 @@ svg {
   justify-content: center;
   height: 100%;
 }
+#parts #blade-container #blade #bimg-container #blade-img {
+  width: 100%;
+}
+#parts #handle-container {
+  width: 100%;
+  height: 100%;
+  max-width: 1000px;
+}
 #parts #handle-container #handle {
   background-color: var(--cherry90);
-  gap: 20px;
 }
 @media (min-width: 1024px) {
   #parts #handle-container #handle {
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: 50% auto;
   }
-  #parts #handle-container #handle #blade-text {
+  #parts #handle-container #handle #handle-text {
     display: flex;
     flex-direction: column;
   }
@@ -646,6 +653,10 @@ svg {
   justify-content: center;
   height: 100%;
 }
+#parts #handle-container #handle #himg-container #handle-img {
+  width: 100%;
+}
+
 /* =============
     gallery
 ============= */
@@ -654,7 +665,6 @@ svg {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  margin: -60px 0px;
 }
 #gallery-container svg {
   width: 100%;
@@ -668,10 +678,20 @@ svg {
   background-color: var(--cherry80);
   display: flex;
   flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  padding: 20px;
+  gap: 20px;
+}
+@media (min-width: 768px) {
+  #gallery-container #gallery {
+    flex-direction: row;
+  }
 }
 #gallery-container #gallery div img {
   line-height: 0;
   display: block;
+  width: 100%;
 }
 
 /* =============
