--- a/dev/scss/content/_gallery.scss
+++ b/dev/scss/content/_gallery.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    margin: -60px 0px;
+    //margin: -60px 0px;
 
 
 
@@ -29,13 +29,23 @@
         background-color: var(--cherry80);
         display: flex;
         flex-direction: column;
+        align-content: center;
+        justify-content: center;
+        padding: 20px;
+        gap: 20px;
+
+        @include md{
+            flex-direction: row;
+        }
 
 
         div{
+            
 
             img{
                 line-height: 0;
-            display: block;
+                display: block;
+                width: 100%;
             
     
     
