--- a/dev/scss/content/_parts.scss
+++ b/dev/scss/content/_parts.scss
@@ -17,6 +17,7 @@
         background-color: aqua;
         grid-area: parts;
         
+        
 
         display: flex;
         flex-direction: column;
@@ -24,25 +25,33 @@
         justify-content: center;
         gap: 16px;
 
-        @include lg{
-            flex-direction: row;
-            gap: 0px;
-            margin: 0;
-        }
+        // @include lg{
+        //     display: grid;
+        //     grid-template-columns: 50% auto;
+        // }
 
        
         }
 
     #blade-container{
         width: 100%;
+        height: 100%;
+        max-width: 1000px;
+        
+
         
        
         #blade{
             
+           
+            
             background-color: var(--cherry90);
-            //padding: 20px;
+
             gap: 20px;
-            @include md{
+            @include lg{
+
+                width: 100%;
+                height: 100%;
                
                 display: grid; 
                 grid-template-columns: 50% auto;   
@@ -62,6 +71,7 @@
                 height: 100%;
 
                 #blade-img{
+                    width: 100%;
 
 
                 }   
@@ -71,19 +81,26 @@
         }
     }
     #handle-container{
+        width: 100%;
+        height: 100%;
+        max-width: 1000px;
        
        
 
         #handle{
+
             
             background-color: var(--cherry90);
             //padding: 20px;
-            gap: 20px;
+            //gap: 20px;
             @include lg{
+
+                width: 100%;
+                height: 100%;
                
                 display: grid; 
                 grid-template-columns: 50% auto;   
-                #blade-text{
+                #handle-text{
                     display: flex;
                     flex-direction: column;
                 }
@@ -98,6 +115,7 @@
                 height: 100%;
 
                 #handle-img{
+                    width: 100%;
     
                 }   
 
