--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -605,6 +605,8 @@ svg {
 #parts #blade-container #blade {
   background-color: var(--cherry90);
   gap: 20px;
+  display: flex;
+  flex-direction: column;
 }
 @media (min-width: 1024px) {
   #parts #blade-container #blade {
@@ -613,19 +615,24 @@ svg {
     display: grid;
     grid-template-columns: 50% auto;
   }
-  #parts #blade-container #blade #blade-text {
-    display: flex;
-    flex-direction: column;
-  }
+}
+#parts #blade-container #blade #blade-text {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
 #parts #blade-container #blade #bimg-container {
+  background-color: blueviolet;
+  padding: 20px;
   display: flex;
-  align-content: center;
-  justify-content: center;
-  height: 100%;
 }
 #parts #blade-container #blade #bimg-container #blade-img {
   width: 100%;
+  height: 100%;
+  align-self: center;
+  justify-self: center;
+  background-image: url(../Images/product-details/blade.png);
+  background-size: cover;
 }
 #parts #handle-container {
   width: 100%;
