--- a/dev/scss/content/_parts.scss
+++ b/dev/scss/content/_parts.scss
@@ -17,18 +17,12 @@
         background-color: aqua;
         grid-area: parts;
         
-        
-
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 16px;
 
-        // @include lg{
-        //     display: grid;
-        //     grid-template-columns: 50% auto;
-        // }
 
        
         }
@@ -43,11 +37,18 @@
        
         #blade{
             
-           
-            
+                        
             background-color: var(--cherry90);
-
             gap: 20px;
+
+            display: flex;
+            flex-direction: column;
+
+            
+
+
+
+
             @include lg{
 
                 width: 100%;
@@ -55,23 +56,39 @@
                
                 display: grid; 
                 grid-template-columns: 50% auto;   
-                #blade-text{
-                    display: flex;
-                    flex-direction: column;
-                }
-                
              }
+
+            #blade-text{
+                display: flex;
+                flex-direction: column;
+                padding: 20px;
+
+               
+            }
+            
            
 
             #bimg-container{
-
+                background-color: blueviolet;
+                padding: 20px;
                 display: flex;
-                align-content: center;
-                justify-content: center;
-                height: 100%;
+
 
                 #blade-img{
+
+
+                    
                     width: 100%;
+                    height: 100%;
+                    //height: 400px;
+                   
+                    align-self: center;
+                    justify-self: center;
+
+                    background-image: url(../Images/product-details/blade.png);
+                    background-size: cover;
+                    
+
 
 
                 }   
