--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -434,6 +434,15 @@ p {
   color: var(--sky10);
 }
 
+.show-lg {
+  display: none;
+}
+@media (min-width: 1024px) {
+  .show-lg {
+    display: block;
+  }
+}
+
 /* =============
     Typography
 ============= */
@@ -586,10 +595,9 @@ svg {
   grid-template-areas: ". parts .";
   padding-top: 32px;
   background-color: var(--cantelope100);
-  padding-bottom: 120px;
+  padding-bottom: 180px;
 }
 #parts > div {
-  background-color: aqua;
   grid-area: parts;
   display: flex;
   flex-direction: column;
@@ -622,17 +630,18 @@ svg {
   padding: 20px;
 }
 #parts #blade-container #blade #bimg-container {
-  background-color: blueviolet;
   padding: 20px;
   display: flex;
+  justify-content: center;
+  align-content: center;
 }
 #parts #blade-container #blade #bimg-container #blade-img {
+  display: flex;
+}
+#parts #blade-container #blade #bimg-container #blade-img img {
+  align-self: center;
   width: 100%;
   height: 100%;
-  align-self: center;
-  justify-self: center;
-  background-image: url(../Images/product-details/blade.png);
-  background-size: cover;
 }
 #parts #handle-container {
   width: 100%;
@@ -641,6 +650,9 @@ svg {
 }
 #parts #handle-container #handle {
   background-color: var(--cherry90);
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
 }
 @media (min-width: 1024px) {
   #parts #handle-container #handle {
@@ -649,19 +661,25 @@ svg {
     display: grid;
     grid-template-columns: 50% auto;
   }
-  #parts #handle-container #handle #handle-text {
-    display: flex;
-    flex-direction: column;
-  }
+}
+#parts #handle-container #handle #handle-text {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
 #parts #handle-container #handle #himg-container {
+  padding: 20px;
   display: flex;
-  align-content: center;
   justify-content: center;
-  height: 100%;
+  align-content: center;
 }
 #parts #handle-container #handle #himg-container #handle-img {
+  display: flex;
+}
+#parts #handle-container #handle #himg-container #handle-img img {
+  align-self: center;
   width: 100%;
+  height: 100%;
 }
 
 /* =============
@@ -672,6 +690,7 @@ svg {
   flex-direction: column;
   justify-content: center;
   align-content: center;
+  margin: -80px 0px;
 }
 #gallery-container svg {
   width: 100%;
@@ -705,14 +724,28 @@ svg {
     info-graphic
 ============= */
 #info-graphic {
+  background-color: var(--cherry60);
+  padding-top: 50px;
+  line-height: 0;
+}
+@media (min-width: 768px) {
+  #info-graphic {
+    padding-top: 80px;
+  }
+}
+@media (min-width: 1024px) {
+  #info-graphic {
+    padding-top: 100px;
+  }
+}
+#info-graphic div {
   display: flex;
   justify-content: center;
   align-content: center;
-  background-color: var(--cherry60);
   margin-top: -30px;
   padding: 60px 24px;
 }
-#info-graphic img {
+#info-graphic div img {
   width: 100%;
   max-width: 1170px;
   line-height: 0;
@@ -728,12 +761,7 @@ svg {
   grid-template-areas: ". tool-care .";
   background-color: var(--cherry60);
   line-height: 0;
-}
-#tool-care #tc-slant {
-  padding: 0;
-}
-#tool-care #tc-slant svg {
-  width: 100%;
+  padding-bottom: 80px;
 }
 #tool-care > div {
   grid-area: tool-care;
@@ -742,12 +770,16 @@ svg {
   display: flex;
   flex-direction: column;
   padding: 0px 20px;
-  gap: 20px;
+  gap: 0px;
 }
 #tool-care > div #care-card {
   display: flex;
   flex-direction: column;
   margin-bottom: 60px;
+  color: aqua;
+}
+#tool-care > div #care-card h1 {
+  padding: 20px 0px;
 }
 #tool-care > div #care-card #sharpening {
   margin-bottom: 32px;
@@ -781,13 +813,114 @@ svg {
     grid-area: p2;
   }
 }
-#tool-care svg {
-  line-height: 0;
-  display: block;
-  width: fit-content;
-  margin-top: -10px;
+
+#tc-curve-bottom {
+  margin-top: 50px;
+}
+@media (min-width: 768px) {
+  #tc-curve-bottom {
+    margin-top: 80px;
+  }
+}
+@media (min-width: 1024px) {
+  #tc-curve-bottom {
+    margin-top: 100px;
+  }
 }
 
 /* =============
     reviews
 ============= */
+#reviews {
+  display: grid;
+  grid-template-columns: 16px auto 16px;
+  grid-template-areas: ". reviews .";
+  padding-top: 32px;
+  background-color: var(--g-dark);
+}
+#reviews #review-container {
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  border-radius: 16px;
+  background-color: var(--cantelope100);
+  max-width: 800px;
+  grid-area: reviews;
+}
+#reviews #review-container #review-head h2 {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+#reviews #review-container #review-head #rating {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+#reviews #review-container #review-head #rating h3 {
+  padding: 16px 20px;
+}
+#reviews #review-container #review-head #rating #left {
+  border-right: 1px solid var(--sky10);
+}
+#reviews #review-container #review-head #stars {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+#reviews #review-container #review-container-2 {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+#reviews #review-container #review-container-2 #review {
+  align-self: center;
+  background-color: var(--white);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 16px;
+  align-content: center;
+  padding: 20px;
+  margin: 20px;
+  gap: 10px;
+}
+@media (min-width: 768px) {
+  #reviews #review-container #review-container-2 #review {
+    flex-direction: row;
+    gap: 40px;
+  }
+}
+#reviews #review-container #review-container-2 #review #profile {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+@media (min-width: 768px) {
+  #reviews #review-container #review-container-2 #review #profile {
+    flex-direction: column;
+    gap: 0;
+  }
+}
+#reviews #review-container #review-container-2 #review #profile .profile-img {
+  display: flex;
+  align-content: baseline;
+}
+#reviews #review-container #review-container-2 #review #profile .profile-img img {
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+}
+#reviews #review-container #review-container-2 #review #profile .info {
+  gap: 0;
+}
+#reviews #review-container #review-container-2 #review #profile .info p {
+  line-height: 8px;
+}
+#reviews #review-container #review-container-2 #review #entry {
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
+  align-content: center;
+}
