--- a/dev/scss/content/_gallery.scss
+++ b/dev/scss/content/_gallery.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    //margin: -60px 0px;
+    margin: -80px 0px;
 
 
 
