--- a/dev/scss/content/_parts.scss
+++ b/dev/scss/content/_parts.scss
@@ -9,12 +9,11 @@
     grid-template-areas: ". parts .";
     padding-top: 32px;
     background-color: var(--cantelope100);
-    padding-bottom: 120px;
+    padding-bottom: 180px;
+    
 
 
     >div{
-
-        background-color: aqua;
         grid-area: parts;
         
         display: flex;
@@ -32,9 +31,6 @@
         height: 100%;
         max-width: 1000px;
         
-
-        
-       
         #blade{
             
                         
@@ -43,11 +39,6 @@
 
             display: flex;
             flex-direction: column;
-
-            
-
-
-
 
             @include lg{
 
@@ -66,30 +57,27 @@
                
             }
             
-           
 
             #bimg-container{
-                background-color: blueviolet;
                 padding: 20px;
                 display: flex;
+                justify-content: center;
+                align-content: center;
+
+            
 
 
                 #blade-img{
 
-
-                    
-                    width: 100%;
-                    height: 100%;
-                    //height: 400px;
-                   
-                    align-self: center;
-                    justify-self: center;
-
-                    background-image: url(../Images/product-details/blade.png);
-                    background-size: cover;
+                    display: flex;
                     
 
+                    img{
+                        align-self: center;
+                        width: 100%;
+                        height: 100%;
 
+                    }
 
                 }   
 
@@ -97,19 +85,21 @@
              
         }
     }
+
     #handle-container{
         width: 100%;
         height: 100%;
         max-width: 1000px;
-       
-       
-
+        
         #handle{
-
             
+                        
             background-color: var(--cherry90);
-            //padding: 20px;
-            //gap: 20px;
+            gap: 20px;
+
+            display: flex;
+            flex-direction: column;
+
             @include lg{
 
                 width: 100%;
@@ -117,29 +107,43 @@
                
                 display: grid; 
                 grid-template-columns: 50% auto;   
-                #handle-text{
-                    display: flex;
-                    flex-direction: column;
-                }
-                
              }
-           
+
+            #handle-text{
+                display: flex;
+                flex-direction: column;
+                padding: 20px;
+
+               
+            }
+            
 
             #himg-container{
+                padding: 20px;
                 display: flex;
-                align-content: center;
                 justify-content: center;
-                height: 100%;
+                align-content: center;
+
 
                 #handle-img{
-                    width: 100%;
-    
+
+                    display: flex;
+                    
+
+                    img{
+                        align-self: center;
+                        width: 100%;
+                        height: 100%;
+
+                    }
+
                 }   
 
             }
              
         }
     }
+    
+    }
 
 
-}
