--- a/dev/scss/content/_reviews.scss
+++ b/dev/scss/content/_reviews.scss
@@ -2,14 +2,23 @@
     reviews
 ============= */
 
+
+
 #reviews{
 
     display: grid;
     grid-template-columns: 16px auto 16px;
     grid-template-areas: ". reviews .";
-    padding-top: 32px;
+    padding-top: 100px;
    
-  background-color: var(--g-dark);
+
+    @include lg{
+
+        padding-top:120px;
+    }
+    
+   
+    background-image:linear-gradient(180deg, #E1CABA -4.15%, #CBA086 24.83%, #91472D 100%);
    
 
     #review-container{
@@ -19,19 +28,28 @@
             border-radius: 16px;
             background-color: var(--cantelope100);
             max-width: 800px;
+            margin-bottom: 60px;
 
 
         grid-area: reviews;
 
         #review-head{
+            border-bottom: 1px solid var(--sky10);
+            padding: 20px;
 
             h2{
                 display: flex;
                 align-content: center;
                  justify-content: center;
+
+                 @include lg{
+                    align-self: center;
+                    
+                 }
+
+               
             }
             
-
             #rating{
                 display: flex;
                 align-content: center;
@@ -57,8 +75,14 @@
                 align-content: center;
                  justify-content: center;
 
+                 @include lg{
+                   margin-left: auto;
+                 }
 
+            }
 
+            @include lg{
+                display: flex;
             }
         }
 
@@ -167,5 +191,7 @@
 
 
     }
+
+    
     
 }
