--- a/dev/scss/content/_tool-care.scss
+++ b/dev/scss/content/_tool-care.scss
@@ -103,9 +103,11 @@
 
     #tc-curve-bottom{
         margin-top: 50px;
+        margin-bottom: -40px;
 
         @include md{
             margin-top: 80px;
+            margin-bottom: -100px;
         }
 
         @include lg{
