--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -35,23 +35,14 @@ ul{
 }
 
 
-.button{
+.button-1{
 
     
     padding: 8px 60px;
     border-radius: 16px;
     border: none;
-
-    justify-content: center;
-
-    color: white;
     background-color:var(--sky60);
-    font-family: 'Noto Serif';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 33px;
-
+    justify-content: center;
     @include lg{
 
         padding: 16px 100px;
@@ -59,7 +50,27 @@ ul{
 
 
     }
+
+    a{
+    color: white;
+   
+    font-family: 'Noto Serif';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 33px;
+    text-decoration: none;
+
     
+    }
+
+    
+    
+}
+
+a{
+
+    text-decoration: none;
 }
 
 .tc-button{
@@ -81,10 +92,7 @@ ul{
 
     width: 100%;
     
-    @include lg{
 
-        max-width: 471px;;
-    }
 }
 
 .parts-img{
@@ -138,5 +146,33 @@ p{
     @include lg{
         display: block;
     }
+}
+
+button{
+    border: none;
+    border-radius: 16px;
+}
+
+.cards{
+
+    background-color: var(--cantelope100);
+    border-radius: 16px;
+    padding: 20px;
+    h1{
+        font-family: 'Noto Sans';
+        font-weight: 600;
+        color: var(--sky60);
+
+
+
+    }
+
+    h2{
+        font-size: 20px;
+        font-family: 'Noto Sans';
+        font-weight: 600;
+    }
+
+
 }
 
