--- a/dev/scss/content/product-pg/_gallery.scss
+++ b/dev/scss/content/product-pg/_gallery.scss
@@ -8,7 +8,11 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    margin: -80px 0px;
+    margin: -80px 0px -30px 0px;
+ 
+    @include lg{
+        margin: -80px 0px -100px 0px;
+    }
 
 
 
