--- a/dev/scss/content/product-pg/_parts.scss
+++ b/dev/scss/content/product-pg/_parts.scss
@@ -9,7 +9,12 @@
     grid-template-areas: ". parts .";
     padding-top: 32px;
     background-color: var(--cantelope100);
-    padding-bottom: 180px;
+    padding-bottom: 150px;
+
+    @include lg{
+
+        padding-bottom: 200px;
+    }
     
 
 
