--- a/dev/scss/content/product-pg/_reviews.scss
+++ b/dev/scss/content/product-pg/_reviews.scss
@@ -18,7 +18,6 @@
     }
     
    
-    background-image:linear-gradient(180deg, #E1CABA -4.15%, #CBA086 24.83%, #91472D 100%);
    
 
     #review-container{
@@ -35,7 +34,7 @@
 
         #review-head{
             border-bottom: 1px solid var(--sky10);
-            padding: 20px;
+            margin: 20px;
 
             h2{
                 display: flex;
@@ -57,13 +56,16 @@
                 //gap: 20px;
 
                 h3{
-                    padding: 16px 20px;
+                    padding: 0 20px;
+                    color: var(--sky10);
+                    font-family: 'Noto Sans';
+                    font-weight: 300;
 
 
                 }
 
                 #left{
-                    border-right: 1px solid var(--sky10);
+                    border-right: 2px solid var(--sky10);
                    
                 }
 
@@ -74,6 +76,7 @@
                 display: flex;
                 align-content: center;
                  justify-content: center;
+                 gap: 4px;
 
                  @include lg{
                    margin-left: auto;
@@ -88,10 +91,14 @@
 
       #review-container-2{
 
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        justify-content: center;
+        
+
+        .disabled{
+            opacity: .5;
+
+            color: var(--sky10);
+
+        }
         
 
         #review{
@@ -135,63 +142,140 @@
                     display: flex;
                     align-content: baseline;
                    
-                
-
-                  
-                   
-                    
-
                     img{
                         border-radius: 50%;
                         width: 80px;
                         height: 80px;
+                        background-size: cover;
                       
 
     
                     }
                 }
 
+
+                #profile-img-1{
+
+                   width: 80px;
+                        height: 80px;
+                        border-radius: 50%;
+                        width: 80px;
+                        height: 80px;
+                        background-image: url(../Images/reviews/rich.webp);
+                        background-size: cover;
+                        background-position: center left;
+                   
+                }
+
+                #profile-img-2{
+
+                    width: 80px;
+                         height: 80px;
+                         border-radius: 50%;
+                         width: 80px;
+                         height: 80px;
+                         background-image: url(../Images/reviews/rob.jpeg);
+                         background-size: cover;
+                         background-position: center right;
+                    
+                 }
+
+                 #profile-img-3{
+
+                    width: 80px;
+                         height: 80px;
+                         border-radius: 50%;
+                         width: 80px;
+                         height: 80px;
+                         background-image: url(../Images/reviews/kirk.jpeg);
+                         background-size: cover;
+                         background-position: center right;
+                    
+                 }
+
                 .info{
 
                gap: 0;
                p{
                 line-height: 8px;
+                font-size: 14px;
+                opacity: .85;
+
+                
+               }
+
+               #name{
+                font-size: 16px;
+                font-weight: 600;
+                opacity: 100;
+                
+
+
                }
 
                 }
-
-
-
-
             }
 
             #entry{
 
                 display: flex;
                 flex-direction: column;
+
+               
                 max-width: 200px;
-                align-content: center;
+                //align-content: top;
+
+                gap: 0;
+
+                h2{
+                    font-size: 20px;
+                    //font-family: "Noto Sans";
+                    
+                   
+                }
+
+                p{
+
+                   
 
 
-            }
+                }
 
-            #review-img{
-             
-                img{
-                 
+                #stars-2{
+
+                    line-height: 0;
+                    margin: -8px 0;
+
                     
                 }
 
 
             }
+
+        }
+
+        #review-nav{
+
+            display: flex;
+            align-self: center;
+            gap: 20px;
+            padding-bottom: 20px;
+            justify-content: center;
+
+            li{
+                a{
+                    
+                    color: var(--sky10);
+                    
+                    font-family: 'Noto Sans';
+                }
+
+                
+            }
+
+           
         }
       }
 
- 
-
-
     }
-
-    
-    
 }
