--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -173,6 +173,32 @@ button{
         font-weight: 600;
     }
 
+    div{
+        display: flex;
+        justify-content: space-between;
+    }
 
+
+}
+
+.checkout-info{
+
+    padding: 20px;
+
+    input{
+        width: 100%;
+        border: none;
+        background-color: aqua;
+    }
+
+    div{
+        display: flex;
+        justify-content: space-between;
+        gap: 16px;
+    }
+
+    #checkout-buttons{
+        margin-top: 20px;
+    }
 }
 
